Fix build with gcc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,11 @@ set(SOURCE_FILES_CLIENT Client/main.cpp
 add_executable(ContainerBuilderServer ${SOURCE_FILES_SERVER})
 add_executable(ContainerBuilderClient ${SOURCE_FILES_CLIENT})
 
+set(THREADS_PREFER_PTHREAD_FLAG ON)
+find_package(Threads REQUIRED)
+target_link_libraries(ContainerBuilderServer ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(ContainerBuilderClient ${CMAKE_THREAD_LIBS_INIT})
+
 
 find_package(Boost 1.64.0 COMPONENTS system coroutine filesystem serialization regex log log_setup thread REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
