working on adding message functionality

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ set(SOURCE_FILES_SERVER Server/src/main.cpp
         Server/src/DockerBackend.cpp
         Server/include/DockerBackend.h
         Server/src/Logger.cpp
-        Server/include/Logger.h)
+        Server/include/Logger.h Common/src/Message.cpp Common/include/Message.h)
 
 # Files related to the API
 set(SOURCE_FILES_CLIENT Client/main.cpp
@@ -35,7 +35,7 @@ set(SOURCE_FILES_CLIENT Client/main.cpp
         Common/src/FileWriter.cpp
         Common/include/FileWriter.h
         Server/src/Logger.cpp
-        Server/include/Logger.h)
+        Server/include/Logger.h Common/src/Message.cpp Common/include/Message.h)
 
 # Create executables
 add_executable(ContainerBuilderServer ${SOURCE_FILES_SERVER})
