Refactoring message io

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,25 +17,25 @@ set(SOURCE_FILES_SERVER Server/src/main.cpp
         Server/include/ReservationRequest.h
         Server/include/Resource.h
         Server/include/ResourceQueue.h
-        Common/src/FileWriter.cpp
-        Common/include/FileWriter.h
-        Common/src/FileReader.cpp
-        Common/include/FileReader.h
+        Common/src/WriteFile.cpp
+        Common/include/WriteFile.h
+        Common/src/ReadFile.cpp
+        Common/include/ReadFile.h
         Server/src/Builder.cpp
         Server/include/Builder.h
         Server/src/DockerBackend.cpp
         Server/include/DockerBackend.h
         Server/src/Logger.cpp
-        Server/include/Logger.h Common/src/Message.cpp Common/include/Message.h)
+        Server/include/Logger.h Common/src/ReadMessage.cpp Common/include/ReadMessage.h Common/src/WriteMessage.cpp Common/include/WriteMessage.h)
 
 # Files related to the API
 set(SOURCE_FILES_CLIENT Client/main.cpp
-        Common/src/FileReader.cpp
-        Common/include/FileReader.h
-        Common/src/FileWriter.cpp
-        Common/include/FileWriter.h
+        Common/src/ReadFile.cpp
+        Common/include/ReadFile.h
+        Common/src/WriteFile.cpp
+        Common/include/WriteFile.h
         Server/src/Logger.cpp
-        Server/include/Logger.h Common/src/Message.cpp Common/include/Message.h)
+        Server/include/Logger.h Common/src/ReadMessage.cpp Common/include/ReadMessage.h Common/src/WriteMessage.cpp Common/include/WriteMessage.h)
 
 # Create executables
 add_executable(ContainerBuilderServer ${SOURCE_FILES_SERVER})
