First stab at having the builder send a heartbeat to the client and attempt to recreate on the fly if the connection bombs out.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ set(SOURCE_FILES_QUEUE
         BuilderQueue/include/OpenStackBuilder.h)
 
 set(SOURCE_FILES_BUILDER
-        Builder/main.cpp
+        Builder/main_heartbeat.cpp
         Common/include/Builder.h
         Common/src/Logger.cpp
         Common/include/Logger.h
@@ -34,7 +34,7 @@ set(SOURCE_FILES_BUILDER
 
 # Files related to the API
 set(SOURCE_FILES_CLIENT
-        Client/main.cpp
+        Client/main_heartbeat.cpp
         Common/include/Builder.h
         Common/src/Logger.cpp
         Common/include/Logger.h
