--- a/spack-etc/packages.yaml
+++ b/spack-etc/packages.yaml
@@ -3,7 +3,7 @@ packages:
     buildable: false
     version: [ 1.65.1 ]
     modules:
-      boost@1.65.1: boost/1.65.1
+      boost@1.65.1+coroutine: boost/1.65.1
 
   openssl:
     buildable: false
